welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:3: error: ';' expected but ')' found.
     )
     ^